[project]
name = "test2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk>=0.118.0",
    "databricks-sql-connector[pyarrow]>=4.3.0",
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "voyageai>=0.4.1",
    "streamlit>=1.28.0",
]
